[Dark Mode] Fix spectrum outline
Fixed: 1227006
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/3009828
Commit-Queue: Paul Lewis <aerotwist@chromium.org>
Commit-Queue: Jack Franklin <jacktfranklin@chromium.org>
Auto-Submit: Paul Lewis <aerotwist@chromium.org>

--- a/front_end/ui/legacy/components/color_picker/spectrum.css
+++ b/front_end/ui/legacy/components/color_picker/spectrum.css
@@ -410,8 +410,7 @@
   margin: 6px;
   cursor: pointer;
   position: relative;
-  border: 1px solid rgb(0 0 0 / 10%); /* stylelint-disable-line plugin/use_theme_colors */
-  /* See: crbug.com/1152736 for color variable migration. */
+  border: 1px solid var(--color-details-hairline);
   background-position: -1px !important; /* stylelint-disable-line declaration-no-important */
   z-index: 14;
 }
